# buddy

./: .clang-format  .clangd  .cmake-format.yaml  .dockerignore  .gitignore  .graphifyignore  AGENTS.md  CLAUDE.md  README.md  build.sh  format_and_lint.sh  run.sh  stop.sh
src/buddy_app/: CMakeLists.txt  package.xml
src/buddy_app/include/buddy_app/: param_file_resolver.hpp
src/buddy_app/params/: audio.asr.yaml  audio.device.yaml  audio.tts.yaml  audio.webrtc.yaml  audio.yaml  brain.yaml  cloud.secret.yaml.example  cloud.yaml  dialog.yaml  keywords.txt  llm_bridge.yaml  local_llm.yaml  modules.yaml  sentence.yaml  state_machine.yaml  system_prompt.txt  vision.camera_info.yaml  vision.device.yaml  vision.yaml
src/buddy_app/src/: buddy_main.cpp  param_file_resolver.cpp
src/buddy_app/test/: test_param_file_resolver.cpp
src/buddy_audio/: CMakeLists.txt  package.xml
src/buddy_audio/include/buddy_audio/: asr_backend.hpp  audio_capture.hpp  audio_config.hpp  audio_pipeline_node.hpp  engine_factory.hpp  speech_recognizer.hpp  tts_backend.hpp  tts_player.hpp
src/buddy_audio/include/buddy_audio/asr/: asr_backend.hpp
src/buddy_audio/src/: asr_native_backend.cpp  audio_capture.cpp  audio_config.cpp  audio_pipeline_node.cpp  engine_factory.cpp  http_tts_backend.cpp  moss_tts_backend.cpp  moss_tts_backend_stub.cpp  server_asr_backend.cpp  sherpa_asr_backend.cpp  sherpa_tts_backend.cpp  speech_recognizer.cpp  tts_player.cpp
src/buddy_audio/src/asr/: asr_native_backend.cpp  server_asr_backend.cpp  sherpa_asr_backend.cpp
src/buddy_audio/src/infer/: backend_factory.cpp  backend_ort.cpp  backend_rknn.cpp
src/buddy_audio/src/io/: audio_preprocessor.cpp  mic_capture.cpp  speaker_player.cpp
src/buddy_audio/src/melo_rknn/: backend_rknn.cpp  frontend.cpp
src/buddy_audio/src/moss_tts/: backend_onnxruntime.cpp  moss_tts_pipeline.cpp  tokenizer.cpp
src/buddy_audio/src/tts/: http_tts_backend.cpp  melo_rknn_tts_backend.cpp  melo_rknn_tts_backend_stub.cpp  moss_tts_backend.cpp  moss_tts_backend_stub.cpp  sherpa_tts_backend.cpp
src/buddy_audio/src/zipformer/: pipeline.cpp
src/buddy_audio/test/: test_audio_node.cpp  test_tts_player_interrupt.cpp
src/buddy_brain/: CMakeLists.txt  package.xml
src/buddy_brain/include/buddy_brain/: asr_filter.hpp  asr_post_filter.hpp  brain_node.hpp  emotion_trigger.hpp  image_capture_coordinator.hpp  sentence_segmenter.hpp  session_context.hpp
src/buddy_brain/src/: asr_filter.cpp  asr_post_filter.cpp  brain_node.cpp  emotion_trigger.cpp  image_capture_coordinator.cpp  sentence_segmenter.cpp  session_context.cpp
src/buddy_brain/test/: test_brain_node.cpp  test_segment.cpp  test_vad_interrupt.cpp
src/buddy_cloud/: CMakeLists.txt  package.xml
src/buddy_cloud/include/buddy_cloud/: cloud_client_node.hpp
src/buddy_cloud/src/: cloud_client_node.cpp
src/buddy_cloud/test/: test_cloud_node.cpp
src/buddy_common/: CMakeLists.txt  package.xml
src/buddy_common/include/buddy_common/: http_client.hpp  json_utils.hpp  time_utils.hpp
src/buddy_common/src/: http_client.cpp
src/buddy_dialog/: CMakeLists.txt  package.xml
src/buddy_dialog/include/buddy_dialog/: dialog_manager_node.hpp
src/buddy_dialog/src/: dialog_manager_node.cpp
src/buddy_dialog/test/: test_dialog_node.cpp
src/buddy_interfaces/: CMakeLists.txt  package.xml
src/buddy_interfaces/action/: Inference.action
src/buddy_interfaces/include/buddy_interfaces/: inference_server_base.hpp
src/buddy_interfaces/msg/: CloudRequest.msg  EmotionResult.msg  ExpressionResult.msg  InferenceChunk.msg  InferenceRequest.msg  Sentence.msg  TtsControl.msg
src/buddy_interfaces/srv/: CaptureImage.srv
src/buddy_llm_bridge/: CMakeLists.txt  package.xml
src/buddy_llm_bridge/include/buddy_llm_bridge/: llm_bridge_node.hpp
src/buddy_llm_bridge/src/: llm_bridge_node.cpp
src/buddy_local_llm/: CMakeLists.txt  package.xml
src/buddy_local_llm/include/buddy_local_llm/: local_llm_node.hpp  ollama_client.hpp
src/buddy_local_llm/src/: local_llm_node.cpp  ollama_client.cpp
src/buddy_local_llm/test/: test_local_llm_node.cpp
src/buddy_robot/buddy_app/: CMakeLists.txt  package.xml
src/buddy_robot/buddy_app/src/: buddy_main.cpp
src/buddy_robot/buddy_bringup/: CMakeLists.txt  package.xml
src/buddy_robot/buddy_bringup/launch/: buddy.launch.py
src/buddy_robot/buddy_bringup/params/: buddy_params.yaml
src/buddy_robot/buddy_cloud/: CMakeLists.txt
src/buddy_robot/buddy_cloud/src/: cloud_client_node.cpp
src/buddy_robot/buddy_cloud/test/: test_cloud_node.cpp
src/buddy_robot/buddy_dialog/: CMakeLists.txt
src/buddy_robot/buddy_dialog/src/: dialog_manager_node.cpp
src/buddy_robot/buddy_dialog/test/: test_dialog_node.cpp
src/buddy_robot/buddy_state_machine/: CMakeLists.txt
src/buddy_robot/buddy_state_machine/src/: state_machine_node.cpp
src/buddy_robot/buddy_state_machine/test/: test_state_machine_node.cpp
src/buddy_sentence/: CMakeLists.txt  package.xml
src/buddy_sentence/include/buddy_sentence/: sentence_segmenter_node.hpp
src/buddy_sentence/src/: sentence_segmenter_node.cpp
src/buddy_sentence/test/: test_sentence_node.cpp
src/buddy_state_machine/: CMakeLists.txt  package.xml
src/buddy_state_machine/include/buddy_state_machine/: state_machine_node.hpp
src/buddy_state_machine/src/: state_machine_node.cpp
src/buddy_state_machine/test/: test_state_machine_node.cpp
src/buddy_vision/: CMakeLists.txt  package.xml
src/buddy_vision/include/buddy_vision/: camera_worker.hpp  emotion_model_haar.hpp  emotion_model_retinaface.hpp  frame_buffer.hpp  infer_backend.hpp  model_interface.hpp  onnx_emotion_model.hpp  vision_pipeline_node.hpp
src/buddy_vision/models/: .gitignore
src/buddy_vision/models/emotion/: emotion_classifier.onnx
src/buddy_vision/src/: emotion_model_haar.cpp  emotion_model_retinaface.cpp  infer_backend_ort.cpp  infer_backend_rknn.cpp  onnx_emotion_model.cpp  vision_pipeline_node.cpp
src/buddy_vision/test/: test_frame_buffer.cpp  test_model_interface.cpp  test_onnx_emotion_model.cpp  test_vision_node.cpp
test/: CMakeLists.txt  test_sentence_segmenter.cpp
(+136 files in other folders)
