<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>buddy_common</name>
  <version>0.1.0</version>
  <description>Shared utilities for buddy robot (HTTP client, JSON helpers)</description>
  <maintainer email="dev@buddy.ai">buddy</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>libcurl4-openssl-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
