cmake_minimum_required(VERSION 3.8)
project(buddy_interfaces)

find_package(ament_cmake REQUIRED)
find_package(rosidl_default_generators REQUIRED)
find_package(builtin_interfaces REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(std_msgs REQUIRED)

rosidl_generate_interfaces(
  ${PROJECT_NAME}
  "msg/InferenceChunk.msg"
  "msg/Sentence.msg"
  "msg/EmotionResult.msg"
  "msg/InferenceRequest.msg"
  "srv/CaptureImage.srv"
  DEPENDENCIES
  builtin_interfaces
  sensor_msgs
  std_msgs)

ament_package()
